demos/taints-tolerations/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taints-tolerations
spec:
  selector:
    app: taints-tolerations
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
